src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>TMG_Model_Score__c</fullName>
        <label>TMG Model Score</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMG_Partner_Promo_Email__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Customer agrees that TMG partner organisations can contact them by email regarding offers</description>
        <label>TMG_Partner_Promo_Email</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMG_Partner_Promo_Phone__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Customer agrees that TMG partner organisations can contact them by phone regarding offers</description>
        <label>TMG_Partner_Promo_Phone</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMG_Partner_Promo_Post__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Customer agrees that TMG partner organisations can contact them by post regarding offers</description>
        <label>TMG_Partner_Promo_Post</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMG_Partner_Promo_SMS__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Customer agrees that TMG partner organisations can contact them by SMS regarding offers</description>
        <label>TMG_Partner_Promo_SMS</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMG_Promo_Email__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Customer agrees that TMG can contact them by email regarding offers</description>
        <label>TMG_Promo_Email</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMG_Promo_Phone__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Customer agrees that TMG can contact them by phone regarding offers</description>
        <label>TMG_Promo_Phone</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMG_Promo_Post__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Customer agrees that TMG can contact them by post regarding offers</description>
        <label>TMG_Promo_Post</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMG_Promo_SMS__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Customer agrees that TMG can contact them by SMS regarding offers</description>
        <label>TMG_Promo_SMS</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tablet_First_Accessed__c</fullName>
        <label>Tablet First Accessed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tablet_Last_Accessed__c</fullName>
        <label>Tablet Last Accessed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Target_Age__c</fullName>
        <description>Target demographic age.</description>
        <label>Target Age</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Children</fullName>
                </value>
                <value>
                    <fullName>Teens</fullName>
                </value>
                <value>
                    <fullName>Young Adult (20-30)</fullName>
                </value>
                <value>
                    <fullName>Adult (30-45)</fullName>
                </value>
                <value>
                    <fullName>Adult (46-60)</fullName>
                </value>
                <value>
                    <fullName>Seniors (60+)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <label>Target Audience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technology Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Technology Partner)</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Teleappended_Date__c</fullName>
        <label>Teleappended Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Telegraph_Readership_Frequency__c</fullName>
        <description>Number of times the customer reads the Telegraph per week</description>
        <label>Telegraph Readership Frequency</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Telegraph_Sunday_Readership_Frequency__c</fullName>
        <label>Telegraph Sunday Readership Frequency</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <inlineHelpText>This is the Vanity title field. (Lord, Lady, Sir etc.)</inlineHelpText>
        <label>Given Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Source__c</fullName>
        <label>Token Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the custoemr wish to subscribe to the Travel E-mail?</inlineHelpText>
        <label>Travel Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>URN__c</fullName>
        <label>URN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Email_Check__c</fullName>
        <description>Field to contain copy of PersonEmail field with uniqueness enabled.</description>
        <inlineHelpText>Field to contain copy of PersonEmail field with uniqueness enabled.</inlineHelpText>
        <label>Unique Email Check</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Upgrades_in_Progress__c</fullName>
        <label>Upgrades in Progress</label>
        <summaryFilterItems>
            <field>Upgrade_History_Item__c.Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </summaryFilterItems>
        <summaryForeignKey>Upgrade_History_Item__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>VAT_Registration_Number__c</fullName>
        <inlineHelpText>Company&apos;s VAT registration number</inlineHelpText>
        <label>VAT Registration Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Segmentation__c</fullName>
        <description>Raw value segmentation data coming from CACI</description>
        <label>Value Segmentation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Concatenated_ID__c</fullName>
        <formula>PersonEmail &amp;&quot;|&quot;&amp; Subscriber_Number__c &amp;&quot;|&quot;&amp;Platform_Vendor_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Concatenated ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voucher_Handling__c</fullName>
        <label>Voucher Handling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>HND Only</fullName>
                </value>
                <value>
                    <fullName>Over The Counter Only</fullName>
                </value>
                <value>
                    <fullName>APP Only</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Voucher_Resends__c</fullName>
        <label>Voucher Resends</label>
        <summarizedField>Subscription__c.Number_of_Voucher_Resends__c</summarizedField>
        <summaryForeignKey>Subscription__c.Subscriber__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Wave_ID__c</fullName>
        <defaultValue>&quot;535T&quot;</defaultValue>
        <label>Wave ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_First_Accessed__c</fullName>
        <label>Website First Accessed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Website_Last_Accessed__c</fullName>
        <label>Website Last Accessed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Week_Ending_Date__c</fullName>
        <label>Week Ending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weekly_Number__c</fullName>
        <defaultValue>&quot;R&quot;</defaultValue>
        <label>Weekly Number</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler__c</fullName>
        <label>Wholesaler</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ePay_Terminal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ePay Terminal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iPadAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>iPad Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>if_correspondence_name__c</fullName>
        <formula>If(Salutation_Text_Hidden__c &lt;&gt; &quot;&quot;, Salutation_Text_Hidden__c &amp; &quot; &quot; &amp; LEFT(FirstName, 1) &amp; &quot; &quot; &amp; LastName, Title__c &amp; &quot; &quot; &amp; LEFT(FirstName, 1) &amp; &quot; &quot; &amp; LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isNewAccountOptIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isNewAccountOptIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loyaltyAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loyalty Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smartphoneAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Webpack Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tablet_app_first_accessed_datetime__c</fullName>
        <label>tablet app first accessed datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>websiteAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Website Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>website_first_accessed_datetime__c</fullName>
        <label>website first accessed datetime</label>
        <type>DateTime</type>
    </fields>
    <recordTypes>
        <fullName>RetailerAccount</fullName>
        <active>true</active>
        <description>Use this record type if creating a retailer Account.</description>
        <label>Retailer Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_First_and_Last_Name_Length</fullName>
        <active>true</active>
        <description>Last Name should be more than 1 character</description>
        <errorConditionFormula>AND(
    NOT($Profile.Name = &quot;Zuora 360 Sync&quot;), 
    RecordType.Name ==&apos;Registrant&apos;,
    (AND(LEN(LastName)&lt;2,NOT(ISBLANK(LastName))))
   )</errorConditionFormula>
        <errorMessage>Please enter the valid last name. Last Name should be more than one character</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Age_will_be_greater_than_16</fullName>
        <active>true</active>
        <description>PP-754 changes on age validation</description>
        <errorConditionFormula>AND(NOT($Profile.Name = &quot;Zuora 360 Sync&quot;), ISNEW() ,OR((ABS(TODAY()- PersonBirthdate ) &lt; 5844),(ABS(TODAY()-PersonBirthdate ) &gt; 36525)))</errorConditionFormula>
        <errorDisplayField>X3rd_Party_Email_Offers__pc</errorDisplayField>
        <errorMessage>Age Should be greater than 16 years and less than 100 years</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Checked_Closed_Date_Required</fullName>
        <active>true</active>
        <description>Ensures that a Closed Date is entered if the Closed checkbox is checked.</description>
        <errorConditionFormula>IF( 
   OR( 
      $Profile.Name = &quot;TMG System&quot;,
      $Profile.Name = &quot;Zuora 360 Sync&quot;
      ),
  false,
  AND(
      Closed__c = True, 
      ISNULL(Closed_Date__c), 
      IsPersonAccount = False
     )
)</errorConditionFormula>
        <errorDisplayField>Closed_Date__c</errorDisplayField>
        <errorMessage>Enter a Closed Date if the Closed checkbox is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_of_bith_validation</fullName>
        <active>false</active>
        <description>PP-754, Age Should be greater than 16 years and less than 100 years</description>
        <errorConditionFormula>AND( OR(ISNEW(), DATEVALUE(CreatedDate) &gt; DATE(2012,11,23)) ,OR((ABS(TODAY()-DateofBirth__c) &lt; 5844),(ABS(TODAY()-DateofBirth__c) &gt; 36525)))</errorConditionFormula>
        <errorDisplayField>X3rd_Party_Email_Offers__pc</errorDisplayField>
        <errorMessage>Age Should be greater than 16 years and less than 100 years</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Executor_fields_read_only</fullName>
        <active>true</active>
        <description>This rule ensures executor fields can only be edited if the Subscriber is marked as deceased</description>
        <errorConditionFormula>IF( OR($Profile.Name = &quot;TMG System&quot;,$Profile.Name = &quot;Zuora 360 Sync&quot;),false,
AND(OR( ISCHANGED( PersonOtherCity ), ISCHANGED( PersonOtherCountry ), ISCHANGED(PersonOtherState),ISCHANGED( PersonOtherStreet),ISCHANGED( PersonOtherPostalCode)), Deceased__pc &lt;&gt; true)
)</errorConditionFormula>
        <errorDisplayField>Deceased__pc</errorDisplayField>
        <errorMessage>An executor address can not be entered unless the Subscriber is marked as Deceased</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fax_Start_Zero</fullName>
        <active>true</active>
        <description>Validates the Fax field to ensure it starts with zero.</description>
        <errorConditionFormula>IF(OR($Profile.Name = &quot;TMG System&quot;, $Profile.Name = &quot;System Administrator&quot;, $Profile.Name = &quot;Zuora 360 Sync&quot;, $Profile.Name = &quot;System Administrator (Custom)&quot;),false,
AND(NOT(BEGINS( Fax,&quot;0&quot;)), OR(PersonMailingCountry=&apos;GB&apos;,PersonMailingCountry=&apos;UK&apos;))
)</errorConditionFormula>
        <errorDisplayField>Fax</errorDisplayField>
        <errorMessage>Fax number must start with zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Home_Phone_Start_Zero</fullName>
        <active>true</active>
        <description>Validates the Phone field to ensure it starts with zero.</description>
        <errorConditionFormula>IF( 
 OR($Profile.Name = &quot;TMG System&quot;,
    $Profile.Name = &quot;System Administrator&quot;, 
    $Profile.Name = &quot;Zuora 360 Sync&quot;, 
    $Profile.Name = &quot;System Administrator (Custom)&quot;,
    $Profile.Name = &quot;Clock&quot;
  )
  ,false,
  AND(NOT(BEGINS(PersonHomePhone ,&quot;0&quot;)), 
     OR(PersonMailingCountry=&apos;GB&apos;,PersonMailingCountry=&apos;UK&apos;)
  )
)</errorConditionFormula>
        <errorDisplayField>PersonHomePhone</errorDisplayField>
        <errorMessage>Phone number must start with zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Last_Name_Only_Text</fullName>
        <active>true</active>
        <description>Last Name can only contain letters</description>
        <errorConditionFormula>/* Does not impact Retailer */
AND(
OR( $RecordType.Name  == &quot;Individual Subscriber&quot;,
$RecordType.Name == &quot;Digital Subscriber&quot;,
$RecordType.Name  == &quot;Registrant&quot;
),
NOT($Profile.Name = &apos;Web API&apos;),
NOT($Profile.Name = &quot;Zuora 360 Sync&quot;), 
NOT(REGEX(LastName, &apos;^[^0-9!\&quot;#&amp;$%&amp;()*+,/:;&lt;=&gt;?@\\[\\]\\^\\{|}_~]+$&apos;))
)</errorConditionFormula>
        <errorMessage>Last Name can only contain letters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Loyalty_Portal_Email_Change</fullName>
        <active>false</active>
        <description>Subscribers whose account has been linked to a Loyalty Portal user can only change their email addresses through the portal.</description>
        <errorConditionFormula>IF( $Profile.Name = &quot;TMG System&quot; || $Profile.Name = &quot;FirstClarityApi&quot; || $Profile.Name = &quot;TMG Third Party API&quot;
  ,false
  ,IF (NOT(ISNULL(Guid__c) || 
      ISBLANK(Guid__c) ||
      PRIORVALUE(Guid__c) == null ||
      PRIORVALUE(Guid__c) == &apos;&apos; ||
      PRIORVALUE(PersonEmail) == null ) &amp;&amp;  
      PersonEmail &lt;&gt;  PRIORVALUE(PersonEmail)
    , true
    , false)
)</errorConditionFormula>
        <errorMessage>This subscriber is registered on the loyalty portal. Email address updates must take place via the portal.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mobile_Start_Zero</fullName>
        <active>true</active>
        <description>Validates the Mobile field to ensure it starts with zero.</description>
        <errorConditionFormula>IF( OR($Profile.Name = &quot;TMG System&quot;,$Profile.Name = &quot;System Administrator&quot;, $Profile.Name = &quot;Zuora 360 Sync&quot;, $Profile.Name = &quot;System Administrator (Custom)&quot;),false,
AND(NOT(BEGINS( PersonMobilePhone,&quot;0&quot;)), OR(PersonMailingCountry=&apos;GB&apos;,PersonMailingCountry=&apos;UK&apos;))
)</errorConditionFormula>
        <errorDisplayField>PersonMobilePhone</errorDisplayField>
        <errorMessage>Mobile number must start with zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Start_Zero</fullName>
        <active>true</active>
        <description>Validates the Phone field to ensure it starts with zero.
MIrfan@Appirio, Amended on 160612 for Jira (PP-1499).</description>
        <errorConditionFormula>IF(
  OR(
     $Profile.Name = &quot;TMG System&quot;,
     $Profile.Name = &quot;System Administrator&quot;, 
     $Profile.Name = &quot;Zuora 360 Sync&quot;,
     $Profile.Name = &quot;System Administrator (Custom)&quot;
    ),
  false,
  AND(
    NOT(BEGINS( Phone,&quot;0&quot;)),
    OR(
       PersonMailingCountry=&apos;GB&apos;,
       PersonMailingCountry=&apos;UK&apos;)
    )
)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Phone number must start with zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Chaining_Duplicates</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(Duplicate_Of__r.Duplicate_Of__c)),
NOT($Profile.Name = &quot;Zuora 360 Sync&quot;)
)</errorConditionFormula>
        <errorMessage>The account you are trying to assign the duplicate already is marked as duplicate</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Price_Plan_Zero</fullName>
        <active>false</active>
        <description>Only system or subs administrator can choose price plan 0</description>
        <errorConditionFormula>AND(
    OR(
        $RecordType.Name = &quot;Individual Subscriber&quot;,
        $RecordType.Name == &quot;Registrant&quot;
      ),
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
    $Profile.Name &lt;&gt; &quot;System Administrator (Custom)&quot;,
    $Profile.Name &lt;&gt; &quot;TMG System&quot;,
    $Profile.Name &lt;&gt; &quot;TMG Subs Administrator&quot;,
    $Profile.Name &lt;&gt; &quot;Zuora 360 Sync&quot;,
    ISPICKVAL( Price_Plan__c , &quot;Plan 0&quot;)
   )</errorConditionFormula>
        <errorDisplayField>Price_Plan__c</errorDisplayField>
        <errorMessage>Only System Administrator or Subs Administrator users can select Price Plan 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Registrant_Email_Required</fullName>
        <active>true</active>
        <description>The Email field is mandatory for account with the following criteria: 
1. record type = registrant</description>
        <errorConditionFormula>AND( 
     RecordType.Name ==&apos;Registrant&apos;, 
     ISBLANK( PersonEmail ),
     ISBLANK(Duplicate_Of__c),
     NOT($Profile.Name = &quot;Zuora 360 Sync&quot;)
)</errorConditionFormula>
        <errorDisplayField>PersonEmail</errorDisplayField>
        <errorMessage>Email is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Registrant_First_Name_Required</fullName>
        <active>true</active>
        <description>The first name field is mandatory for account with the following criteria: 
1. record type = registrant</description>
        <errorConditionFormula>AND( 
     RecordType.Name ==&apos;Registrant&apos;, 
     ISBLANK(FirstName),
     NOT($Profile.Name = &quot;Web API&quot;),
     NOT($Profile.Name = &quot;Zuora 360 Sync&quot;),
     ISBLANK(Duplicate_Of__c) 
)</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>First Name is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Registrant_Mailing_City_Required</fullName>
        <active>true</active>
        <description>The Mailing City field is mandatory for account with the following criteria: 
1. record type = registrant</description>
        <errorConditionFormula>AND( 
RecordType.Name ==&apos;Registrant&apos;, 
ISBLANK( PersonMailingCity  ),
NOT($Profile.Name = &quot;Web API&quot;),
NOT($Profile.Name = &quot;TMG System&quot;),
NOT($User.Alias = &quot;sfdcdev&quot;),
NOT($Profile.Name = &quot;Zuora 360 Sync&quot;),
ISBLANK(Duplicate_Of__c) 
)</errorConditionFormula>
        <errorDisplayField>PersonMailingCity</errorDisplayField>
        <errorMessage>Mailing City is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Registrant_Mailing_Country_Required</fullName>
        <active>true</active>
        <description>The Mailing Country field is mandatory for account with the following criteria: 
1. record type = registrant</description>
        <errorConditionFormula>AND( 
RecordType.Name ==&apos;Registrant&apos;, 
ISBLANK( PersonMailingCountry ),
NOT($Profile.Name = &quot;Web API&quot;),
NOT($Profile.Name = &quot;TMG System&quot;), 
NOT($User.Alias = &quot;sfdcdev&quot;),
NOT($Profile.Name = &quot;Zuora 360 Sync&quot;),
ISBLANK(Duplicate_Of__c) 
)</errorConditionFormula>
        <errorDisplayField>PersonMailingCountry</errorDisplayField>
        <errorMessage>Mailing Country is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Registrant_Mailing_Street_Required</fullName>
        <active>true</active>
        <description>The Mailing Street field is mandatory for account with the following criteria: 
1. record type = registrant</description>
        <errorConditionFormula>AND( 
  RecordType.Name ==&apos;Registrant&apos;, 
  ISBLANK( PersonMailingStreet ),
  NOT($Profile.Name = &quot;Web API&quot;),
  NOT($User.Alias = &quot;sfdcdev&quot;),
  NOT($Profile.Name = &quot;Zuora 360 Sync&quot;),
  NOT($Profile.Name = &quot;TMG System&quot;), 
  ISBLANK(Duplicate_Of__c)
)</errorConditionFormula>
        <errorDisplayField>PersonMailingStreet</errorDisplayField>
        <errorMessage>Mailing Street is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Registrant_UK_Postal_Code_Required</fullName>
        <active>true</active>
        <description>The Postal Code field is mandatory for account with the following criteria: 
1. record type = registrant 
2. country is UK</description>
        <errorConditionFormula>AND( 
  RecordType.Name ==&apos;Registrant&apos;, 
  LOWER(PersonMailingCountry) ==&apos;gb&apos;, 
  ISBLANK( PersonMailingPostalCode ),
  ISBLANK(Duplicate_Of__c),
  NOT($Profile.Name = &quot;Zuora 360 Sync&quot;),
  NOT($Profile.Name = &quot;TMG System&quot;),
  NOT($User.Alias = &quot;sfdcdev&quot;)
)</errorConditionFormula>
        <errorDisplayField>PersonMailingPostalCode</errorDisplayField>
        <errorMessage>Postal Code is required for United Kingdom</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Registrant_US_Canada_state_required</fullName>
        <active>true</active>
        <description>The state field is mandatory for account with the following criteria: 
1. record type = registrant 
2. country is US OR Canada</description>
        <errorConditionFormula>AND(
  RecordType.Name ==&apos;Registrant&apos;, 
  OR( PersonMailingCountry ==&apos;CA&apos;,PersonMailingCountry ==&apos;US&apos;), 
  ISBLANK( PersonMailingState),
  ISBLANK(Duplicate_Of__c),
  NOT($User.Alias = &quot;sfdcdev&quot;),
  NOT($Profile.Name = &quot;Zuora 360 Sync&quot;),
  NOT($Profile.Name = &quot;TMG System&quot;) 
)</errorConditionFormula>
        <errorDisplayField>PersonMailingState</errorDisplayField>
        <errorMessage>Mailing State/Province is required for United states and Canada</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Registrant_Uk_Title_Required</fullName>
        <active>false</active>
        <description>The Salutation field is mandatory for account with the following criteria: 
1. record type = registrant 
2. country is UK</description>
        <errorConditionFormula>AND(
   RecordType.Name ==&apos;Registrant&apos;, 
   LOWER(PersonMailingCountry) ==&apos;gb&apos;, 
   ISBLANK(Text(Salutation)) , 
   ISBLANK( Title__c ),
   NOT($Profile.Name = &quot;Zuora 360 Sync&quot;) 
)</errorConditionFormula>
        <errorMessage>For United Kingdom, you must enter a Title or a Given Title.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Titles_or_GivenName</fullName>
        <active>true</active>
        <description>Salutation is mandatory for Registrant record type for non Web API profile users. We no longer check Given Title (Title__c) as there is a trigger that copies over Title__c into Salutation.</description>
        <errorConditionFormula>AND(
ISPICKVAL(Salutation,&apos;&apos;),
IsPersonAccount, 
RecordType.Name=&apos;Registrant&apos;, 
NOT($Profile.Name=&apos;Web API&apos;),
NOT($Profile.Name = &quot;Zuora 360 Sync&quot;),
ISBLANK(Duplicate_Of__c), 
PersonMailingCountry = &apos;UK&apos;
)</errorConditionFormula>
        <errorMessage>Either Title or Given Title should be provided.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UK_Post_Code_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
     NOT($Profile.Name = &quot;TMG System&quot;),
     LOWER(PersonMailingCountry) = &quot;gb&quot;, 
     OR($RecordType.Name = &quot;Digital Subscriber&quot;,  
            $RecordType.Name = &quot;Individual Subscriber&quot;, 
            $RecordType.Name = &quot;School&quot;
      ),
     OR(
           ISBLANK( PersonMailingPostalCode ),
           NOT( REGEX(PersonMailingPostalCode, &quot;^([Gg][Ii][Rr] 0[Aa]{2})|((([A-Za-z][0-9]{1,2})|(([A-Za-z][A-Ha-hJ-Yj-y][0-9]{1,2})|(([A-Za-z][0-9][A-Za-z])|([A-Za-z][A-Ha-hJ-Yj-y][0-9]?[A-Za-z])))) {0,1}[0-9][A-Za-z]{2})$&quot;)) 
     )
)</errorConditionFormula>
        <errorMessage>Please enter a valid postcode.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UpdatesInProgress</fullName>
        <active>true</active>
        <errorConditionFormula>Upgrades_in_Progress__c &gt; 1</errorConditionFormula>
        <errorMessage>You already have an upgrade in progress</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Wholesaler_Fields_Read_Only</fullName>
        <active>true</active>
        <description>Ensures that the Account Name and Shop Address fields are read-only if the Account Type is Wholesaler.</description>
        <errorConditionFormula>IF( OR($Profile.Name = &quot;TMG System&quot;,$Profile.Name = &quot;Zuora 360 Sync&quot;),false,
IF(ISPICKVAL(Account_Type__c, &quot;Wholesaler&quot;), OR(ISCHANGED(Name), ISCHANGED(BillingStreet), ISCHANGED(BillingCity), ISCHANGED(BillingState), ISCHANGED(BillingPostalCode), ISCHANGED(BillingCountry)), false)
)</errorConditionFormula>
        <errorMessage>Account Name and Shop Address fields are read-only for Wholesalers.</errorMessage>
    </validationRules>
</CustomObject>